package edu.fiuba.algo3.modelo;

public class Pozo implements Obstaculo {
}
